--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ height: 550px;
 .about-phase-one{
     background-color: rgb(0, 0, 0);
     width: 100%;
-    height: 1000px;
+    height: 900px;
     padding: 190px 10px;
 
     display: flex;
@@ -145,7 +145,7 @@ height: 550px;
 }
 .about-phase-two{
     background-color: #ffffff;
-    height: 1080px;
+    height: 1000px;
     padding: 190px 10px;
 
     display: flex;
@@ -204,15 +204,15 @@ height: 550px;
 }
 .projects{
     background-color: rgb(255, 255, 255);
-    height: 1080px;
-    padding: 190px 10px;
+    height: 900px;
+    padding: 190px 0px;
     padding-top: 0px;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    gap: 280px;
+    gap: 240px;
 
 }
 
@@ -220,20 +220,20 @@ height: 550px;
     background-color: #0f0d0d;
     position: relative;
     width: 100%;
-
-
+    overflow: hidden;
 }
+
 .my-project-wrapper ul{
     display: flex;
     list-style: none;
-    transform: translateX(-1000px);
-    animation: scroll 12s infinite linear;
+    animation: scroll 8s infinite linear;
+    
     background-color: #0f0d0d;
     width: 100%;
+    white-space: nowrap;
 }
 
 .my-project-wrapper ul li{
-    white-space: nowrap;
     padding: 0px 25px;
     font-size: 40px;
 }
@@ -250,11 +250,11 @@ height: 550px;
 
 @keyframes scroll {
     from {
-        transform: translateX(100%);
+        transform: translateX(0);
     }
 
     to{
-        transform: translateX(-1800px);
+        transform: translateX(-100%);
     }
 }
 
