--- a/styles.css
+++ b/styles.css
@@ -205,15 +205,13 @@ height: 550px;
 .projects{
     background-color: rgb(255, 255, 255);
     height: 900px;
-    padding: 190px 0px;
-    padding-top: 0px;
+    padding-bottom: 10px;
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content:space-between;
     align-items: center;
-    gap: 240px;
-
+    gap: 60px;
 }
 
 .my-project-wrapper{
@@ -274,7 +272,6 @@ height: 550px;
     margin: 0px;
     padding: 0px;
 }
-
 #fitnesschamp{
     transition: 0.4 ease-in-out;
     box-shadow: 0px 0px 4px 4px rgba(255, 255, 255, 25);
