--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ height: 550px;
 }
 .projects{
     background-color: rgb(255, 255, 255);
-    height: 1000px;
+    height: 900px;
     padding-bottom: 10px;
 
     display: flex;
@@ -396,16 +396,37 @@ input[type="email"]::placeholder {
 /* ##############################################-FOOTER-############################################# */
 .footer{
     width: 100%;
-    height: 80px;
+    height: 150px;
     background-color: #0f0d0d;
     display: flex;
-    align-items: end;
+    flex-direction: column;
     justify-content: space-between;
     font-size: 14px;
     color: antiquewhite;
+    gap: 20px;
 }
+
+.footer-notes{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .footer > *{
     margin-left: 20px;
     margin-bottom: 5px;
     margin-right: 20px;
+}
+
+footer a{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding-right: 30px;
+}
+
+#arrow-up{
+    width: 60px;
+    height: 60px;
 }
