--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ background: rgb(178,223,222);
 background: linear-gradient(90deg, rgba(178,223,222,1) 1%, rgba(56,120,89,1) 51%, rgba(68,19,23,1) 99%);
 }
 .home{
+    
     display: flex;
     flex-direction: row;
     justify-content: center ;
@@ -115,6 +116,13 @@ height: 550px;
 }
 
 /* ##############################################-ABOUT-############################################# */
+#bg-particles{
+    position: absolute;
+    height: 100;
+    width: 100%;
+    z-index: -1;
+}
+
 .about-phase-one{
     background-color: rgb(0, 0, 0);
     width: 100%;
@@ -126,6 +134,7 @@ height: 550px;
     justify-content: center;
     align-items: center;
     gap:100px;
+    z-index: 9999;
 }
 .tech-stack{
     display: flex;
@@ -142,6 +151,7 @@ height: 550px;
     max-width: 900px;
     font-size: 25px;
     padding-left: 90px;
+
 }
 .about-phase-two{
     background-color: #ffffff;
