--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ background: linear-gradient(90deg, rgba(178,223,222,1) 1%, rgba(56,120,89,1) 51%
 }
 
 .home{
-    height: 100vh;
+    height: 95vh;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -120,7 +120,7 @@ background: linear-gradient(90deg, rgba(178,223,222,1) 1%, rgba(56,120,89,1) 51%
 }
 
 #profile{
-    width: min(600px, 300px);
+    width: 600px;
     height: 70vh;
     z-index: 1;
 }
